<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">r_slash</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="upvotes_placeholder">UPVOTES</string>
    <string name="username_placeholder">USERNAME</string>
    <string name="url_placeholder">URL</string>
    <string name="title_placeholder">TITLE</string>
    <string name="age_placeholder">AGE</string>
    <string name="thumbnail_image">Thumbnail Image</string>

</resources>
