<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/post_margin"
    android:layout_marginBottom="@dimen/post_margin"
    >

    <ImageView
        android:layout_width="@dimen/thumbnail_size"
        android:layout_height="@dimen/thumbnail_size"
        android:contentDescription="@string/thumbnail_image"
        android:id="@+id/image_imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/title_textView"
        android:padding="0dp"
        android:textColor="@android:color/black"
        android:text="@string/title_placeholder"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/image_imageView"
        android:layout_marginStart="@dimen/text_view_padding"
        android:layout_marginEnd="@dimen/text_view_padding"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/username_placeholder"
        android:textColor="@color/username_color"
        android:id="@+id/user_textView"
        android:layout_toEndOf="@id/image_imageView"
        android:layout_below="@+id/title_textView"
        android:layout_marginStart="@dimen/text_view_padding"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upvotes_textView"
        android:text="@string/upvotes_placeholder"
        android:textColor="@color/upvotes_color"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:layout_toEndOf="@id/title_textView"
        android:layout_marginEnd="@dimen/text_view_padding"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/age_textView"
        android:text="@string/age_placeholder"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/title_textView"
        android:textColor="@android:color/black"
        android:layout_marginEnd="@dimen/text_view_padding"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_textView"
        android:text="@string/url_placeholder"
        android:textColor="@color/unclicked_link_color"
        android:layout_toEndOf="@id/user_textView"
        android:id="@+id/url_textView"
        android:layout_marginStart="12dp"/>

</RelativeLayout>
